fix vertical alignment when image gets short

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ header div {
 .picture {
   padding-right: 1em;
   text-align: center;
+  align-self: stretch;
 }
 
 .picture img {
